@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Yang Tse (14 Jul 2008)
+- HTTP_ONLY definition check in lib/setup.h is now done once that configuration
+  file has been included. In this way if symbol is defined in the config file
+  it will no longer be ignored.
+
 Yang Tse (11 Jul 2008)
 - Added missing multiple header inclusion prevention definition for header
   file content_encoding.h
